--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -7,6 +7,7 @@
   from openedx.core.djangoapps.lang_pref.api import footer_language_selector_is_enabled
   from openedx.core.djangoapps.site_configuration import helpers as configuration_helpers
   import json
+  import traceback
 %>
 <% footer = get_footer(is_secure=is_secure) %>
 <% icp_license_info = getattr(settings, 'ICP_LICENSE_INFO', {})%>
@@ -17,60 +18,83 @@ instagram_url = footer_url_config.get('instagram', '')
 youtube_url = footer_url_config.get('youtube', '')
 linkedin_url = footer_url_config.get('linkedin', '')
 %>
+<%
+  eolcontactform_url = None
+  eolcontactform_traceback = None
+  try:
+    eolcontactform_url = '{}'.format(reverse('contact_form_view'))
+  except Exception as e:
+    eolcontactform_traceback = traceback.format_exc()
+%>
+% if eolcontactform_traceback and settings.DEBUG:
+  <div class="eolcontactform_traceback" hidden>
+    <pre>${eolcontactform_traceback}</pre>
+  </div>
+% endif
 
 <footer id="openuchile-footer" class="openuchile-bg mt-auto text-center mx-auto py-4 max-course-container">
   <div class="border-0 mb-3 text-center">
-    <div class="row m-0 mb-4">
-      <a href="https://www.uchile.cl/" target="_blank" class="text-decoration-none col-md-6 col-sm-12 align-self-end d-flex justify-content-center justify-content-sm-center justify-content-md-end justify-content-xl-end">
-        <img src="${static.url('open-uchile-theme/images/logo_uchile.png')}" class="img-fluid my-auto p-0 pr-xl-5 pl-md-5" alt="UChile" style="max-height: 110px;">
+    <div class="row m-0 mb-4 d-flex justify-content-center">
+      <a href="https://www.uchile.cl/" target="_blank" class="text-decoration-none col-12 col-md-4 col-sm-12 col-xl-3 align-self-end d-flex justify-content-center justify-content-sm-center justify-content-md-center justify-content-xl-center">
+        <img src="${static.url('open-uchile-theme/images/logo_uchile.png')}" class="img-fluid my-auto p-0 " alt="UChile" style="max-height: 110px;">
       </a>
-      <a href="https://oficinaeol.uchile.cl/" target="_blank" class="text-decoration-none col-md-6 col-sm-12 align-self-end d-flex justify-content-center justify-content-sm-center justify-content-md-start justify-content-xl-start">
-        <img src="${static.url('open-uchile-theme/images/logo_eol.png')}" class="img-fluid my-auto p-0 pl-xl-5 pr-md-5" alt="EOL" style="max-height: 80px;">
+      <a href="https://oficinaeol.uchile.cl/" target="_blank" class="text-decoration-none col-12 col-md-4 col-sm-12 col-xl-3 align-self-end d-flex justify-content-center justify-content-sm-center justify-content-md-center justify-content-xl-center">
+        <img src="${static.url('open-uchile-theme/images/logo_eol.png')}" class="img-fluid my-auto p-0" alt="EOL" style="max-height: 80px;">
       </a>
     </div>
-    % if footer_url_config != {}:
-      <div class="border-0 mb-0 p-0 pt-4 text-center">
-        % if linkedin_url  != '':
-          <a class="text-decoration-none" href="${linkedin_url}" role="button" aria-expanded="false" alt="linkedIn OpenUchile" title="LinkedIn" target="_blank">
-            <span class="icon fa fa-linkedin-square icon-footer linkedin-hover-color" aria-hidden="true"></span>
-          </a>
-        % endif
-        % if youtube_url != '':
-          <a class="text-decoration-none" href="${youtube_url}" role="button" aria-expanded="false" alt="Youtube oficina EOL" title="Youtube" target="_blank">
-            <span class="icon fa fa-youtube-play icon-footer youtube-hover-color" aria-hidden="true"></span>
-          </a>
-        % endif
-        % if instagram_url != '': 
-          <a class="text-decoration-none" href="${instagram_url}" role="button" aria-expanded="false" alt="Página web oficina EOL" title="Oficina Eol" target="_blank">
-            <span class="icon fa fa-instagram icon-footer instagram-hover-color" aria-hidden="true"></span>
-          </a>
-        % endif
-      </div>
-    % endif
-  </div>
 
-  <p class="text-center">${_('Need help?')} <a href="/contact_form">${_('Contact us')}</a></p>
-  <p class="text-center">
-    <small class="text-muted">
-      ${footer['copyright']}
-      </br>
-      <ul class="p-0">
-        <li class="fw-bolder d-inline-block">
-          <a href="/honor">${_('Terms and Conditions')}</a>    -
-        </li>
-        <li class="fw-bolder d-inline-block">
-          <a href="/privacy">${_('Privacy Policy')}</a>
-        </li>
-      </ul>
-      
-      % if icp_license_info.get('icp_license'):
-        ${u" | {text}".format(text=icp_license_info.get('text'))}
-        <a href="${icp_license_info.get('icp_license_link', '#')}" class="fw-bolder">
-            ${u" {icp}".format(icp=icp_license_info.get('icp_license'))}
+  </div>
+  % if footer_url_config != {}:
+    <div class="border-0 mb-2 p-0 pt-4 text-center">
+      % if linkedin_url  != '':
+        <a class="text-decoration-none" href="${linkedin_url}" role="button" aria-expanded="false" alt="linkedIn OpenUchile" title="LinkedIn" target="_blank">
+          <span class="icon fa fa-linkedin-square icon-footer linkedin-hover-color" aria-hidden="true"></span>
         </a>
       % endif
-    </small>
-  </p>
+      % if youtube_url != '':
+        <a class="text-decoration-none" href="${youtube_url}" role="button" aria-expanded="false" alt="Youtube oficina EOL" title="Youtube" target="_blank">
+          <span class="icon fa fa-youtube-play icon-footer youtube-hover-color" aria-hidden="true"></span>
+        </a>
+      % endif
+      % if instagram_url != '': 
+        <a class="text-decoration-none" href="${instagram_url}" role="button" aria-expanded="false" alt="Página web oficina EOL" title="Oficina Eol" target="_blank">
+          <span class="icon fa fa-instagram icon-footer instagram-hover-color" aria-hidden="true"></span>
+        </a>
+      % endif
+    </div>
+  % endif
+<div class="position-relative">
+    %if eolcontactform_url:
+      <p class="text-center">${_('Need help?')} <a href="/contact_form">${_('Contact us')}</a></p>
+    % endif
+    <p class="text-center mx-5 px-5">
+      <small class="text-muted">
+        ${footer['copyright']}
+        </br>
+        <ul class="p-0">
+          <li class="fw-bolder d-inline-block">
+            <a href="/honor">${_('Terms and Conditions')}</a>    -
+          </li>
+          <li class="fw-bolder d-inline-block">
+            <a href="/privacy">${_('Privacy Policy')}</a>
+          </li>
+        </ul>
+        
+        % if icp_license_info.get('icp_license'):
+          ${u" | {text}".format(text=icp_license_info.get('text'))}
+          <a href="${icp_license_info.get('icp_license_link', '#')}" class="fw-bolder">
+              ${u" {icp}".format(icp=icp_license_info.get('icp_license'))}
+          </a>
+        % endif
+      </small>
+    </p>
+  <div class="openedx-logo">
+    <a href="https://open.edx.org"  target="_blank" class="ttext-decoration-none col-12 col-md-4 col-sm-12 col-xl-2 align-self-end d-flex justify-content-center justify-content-sm-center justify-content-md-center justify-content-xl-center my-xl-0 mx-md-5 my-3 my-sm-3 my-md-0">
+      <img src="${static.url('open-uchile-theme/images/openedx_logo.png')}" class="img-fluid my-auto p-0" alt="Con la tecnología de Open edX" style="max-height: 50px;">
+    </a>
+  </div>
+</div>
+  
 </footer>
 
 % if context.get('include_language_selector', footer_language_selector_is_enabled()):
