--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -20,37 +20,41 @@ linkedin_url = footer_url_config.get('linkedin', '')
 
 <footer id="openuchile-footer" class="openuchile-bg mt-auto text-center mx-auto py-4">
   <div class="border-0 mb-3 text-center">
-    <div class="row m-0 mb-4">
-      <a href="https://www.uchile.cl/" target="_blank" class="text-decoration-none col-md-6 col-sm-12 align-self-end d-flex justify-content-center justify-content-sm-center justify-content-md-end justify-content-xl-end">
-        <img src="${static.url('open-uchile-theme/images/logo_uchile.png')}" class="img-fluid my-auto p-0 pr-xl-5 pl-md-5" alt="UChile" style="max-height: 110px;">
+    <div class="row m-0 mb-4 d-flex justify-content-center">
+      <a href="https://www.uchile.cl/" target="_blank" class="text-decoration-none col-12 col-md-4 col-sm-12 col-xl-3 align-self-end d-flex justify-content-center justify-content-sm-center justify-content-md-center justify-content-xl-end">
+        <img src="${static.url('open-uchile-theme/images/logo_uchile.png')}" class="img-fluid my-auto p-0 " alt="UChile" style="max-height: 110px;">
       </a>
-      <a href="https://oficinaeol.uchile.cl/" target="_blank" class="text-decoration-none col-md-6 col-sm-12 align-self-end d-flex justify-content-center justify-content-sm-center justify-content-md-start justify-content-xl-start">
-        <img src="${static.url('open-uchile-theme/images/logo_eol.png')}" class="img-fluid my-auto p-0 pl-xl-5 pr-md-5" alt="EOL" style="max-height: 80px;">
+      <a href="https://open.edx.org"  target="_blank" class="ttext-decoration-none col-12 col-md-4 col-sm-12 col-xl-2 align-self-end d-flex justify-content-center justify-content-sm-center justify-content-md-center justify-content-xl-center my-xl-0 mx-md-5 my-3 my-sm-3 my-md-0">
+        <img src="${static.url('open-uchile-theme/images/openedx_logo.png')}" class="img-fluid my-auto p-0" alt="Con la tecnología de Open edX" style="max-height: 78px;">
+      </a>
+      <a href="https://oficinaeol.uchile.cl/" target="_blank" class="text-decoration-none col-12 col-md-4 col-sm-12 col-xl-3 align-self-end d-flex justify-content-center justify-content-sm-center justify-content-md-center justify-content-xl-start">
+        <img src="${static.url('open-uchile-theme/images/logo_eol.png')}" class="img-fluid my-auto p-0" alt="EOL" style="max-height: 80px;">
       </a>
     </div>
-    % if footer_url_config != {}:
-      <div class="border-0 mb-0 p-0 pt-4 text-center">
-        % if linkedin_url  != '':
-          <a class="text-decoration-none" href="${linkedin_url}" role="button" aria-expanded="false" alt="linkedIn OpenUchile" title="LinkedIn" target="_blank">
-            <span class="icon fa fa-linkedin-square icon-footer linkedin-hover-color" aria-hidden="true"></span>
-          </a>
-        % endif
-        % if youtube_url != '':
-          <a class="text-decoration-none" href="${youtube_url}" role="button" aria-expanded="false" alt="Youtube oficina EOL" title="Youtube" target="_blank">
-            <span class="icon fa fa-youtube-play icon-footer youtube-hover-color" aria-hidden="true"></span>
-          </a>
-        % endif
-        % if instagram_url != '': 
-          <a class="text-decoration-none" href="${instagram_url}" role="button" aria-expanded="false" alt="Página web oficina EOL" title="Oficina Eol" target="_blank">
-            <span class="icon fa fa-instagram icon-footer instagram-hover-color" aria-hidden="true"></span>
-          </a>
-        % endif
-      </div>
-    % endif
+
   </div>
+  % if footer_url_config != {}:
+    <div class="border-0 mb-2 p-0 pt-4 text-center">
+      % if linkedin_url  != '':
+        <a class="text-decoration-none" href="${linkedin_url}" role="button" aria-expanded="false" alt="linkedIn OpenUchile" title="LinkedIn" target="_blank">
+          <span class="icon fa fa-linkedin-square icon-footer linkedin-hover-color" aria-hidden="true"></span>
+        </a>
+      % endif
+      % if youtube_url != '':
+        <a class="text-decoration-none" href="${youtube_url}" role="button" aria-expanded="false" alt="Youtube oficina EOL" title="Youtube" target="_blank">
+          <span class="icon fa fa-youtube-play icon-footer youtube-hover-color" aria-hidden="true"></span>
+        </a>
+      % endif
+      % if instagram_url != '': 
+        <a class="text-decoration-none" href="${instagram_url}" role="button" aria-expanded="false" alt="Página web oficina EOL" title="Oficina Eol" target="_blank">
+          <span class="icon fa fa-instagram icon-footer instagram-hover-color" aria-hidden="true"></span>
+        </a>
+      % endif
+    </div>
+  % endif
 
   <p class="text-center">${_('Need help?')} <a href="/contact_form">${_('Contact us')}</a></p>
-  <p class="text-center">
+  <p class="text-center mx-5 px-5">
     <small class="text-muted">
       ${footer['copyright']}
       </br>
