fix(fixup): add translation to price From and To label

--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -134,11 +134,11 @@
                   <div class="accordion-body">
                     <div class="price-inputs d-flex justify-content-between">
                       <div class="input-group d-flex flex-column">
-                        <label for="min-input">From:</label>
+                        <label for="min-input">${_('From')}:</label>
                         <input type="number" class="form-control w-75" id="min-input" value="" min="0" step="any" pattern="\d*" placeholder="0"/>
                       </div>
                       <div class="input-group d-flex flex-column">
-                        <label for="max-input">To:</label>
+                        <label for="max-input">${_('To')}:</label>
                         <input type="number" class="form-control w-75" id="max-input" value="" min="0" step="any" pattern="\d*" placeholder="100000"/>
                       </div>
                     </div>
