refactor(fixup): update placeholder in price form number to min and max

--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -135,11 +135,11 @@
                     <div class="price-inputs d-flex justify-content-between">
                       <div class="input-group d-flex flex-column">
                         <label for="min-input">${_('From')}:</label>
-                        <input type="number" class="form-control w-75" id="min-input" value="" min="0" step="any" pattern="\d*" placeholder="0"/>
+                        <input type="number" class="form-control w-75" id="min-input" value="" min="0" step="any" pattern="\d*" placeholder="Min"/>
                       </div>
                       <div class="input-group d-flex flex-column">
                         <label for="max-input">${_('To')}:</label>
-                        <input type="number" class="form-control w-75" id="max-input" value="" min="0" step="any" pattern="\d*" placeholder="100000"/>
+                        <input type="number" class="form-control w-75" id="max-input" value="" min="0" step="any" pattern="\d*" placeholder="Max"/>
                       </div>
                     </div>
                     <div class="form-check form-switch my-4 d-flex align-items-center">
